--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
       <section id="detidos-section" class="hidden">
         <div class="container">
           <div class="header">
-            <h1>Detidos/Apreendidos — Por grupamentos - 2025</h1>
-            <div class="subtitle">Contagem de pessoas detidas/apreendidas </div>
+            <h1>Detidos/Apreendidos - 2025</h1>
+            <div class="subtitle">Contagem por GRUPAMENTO de pessoas detidas/apreendidas</div>
           </div>
           <div id="de-cards" class="cards hidden"></div>
           <section id="de-panel" class="panel hidden">
