--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <div class="container">
           <div class="header">
             <h1>Apreensões de Drogas — 2025</h1>
-            <div class="subtitle">Guarda Municipal de Londrina - soma por em (kg)</div>
+            <div class="subtitle">Guarda Municipal de Londrina - soma em (kg)</div>
           </div>
           <div id="dr-cards" class="cards hidden"></div>
           <section id="dr-panel" class="panel hidden">
